# strawberry-django-export-schema-example

./: .gitignore  pyproject.toml
example/example/: README.md  schema.py  settings.py  urls.py
example/example/books/: apps.py  models.py
example/example/books/migrations/: 0001_initial.py  0002_series_book_series.py
example/example/schema/: __init__.py  author.py  schema.py  series.py
